@@ -48,3 +48,4 @@
   28-Jul-2021  - V0.56 Update constructor API for TaxonomyProvider and update dependencies
    5-Sep-2021  - V0.57 Update SAbDab data importer, fix initialization in ChEMBLTargetActivityProvider.getStatusDetails()
   14-Sep-2021  - V0.58 Add cache test for TaxonomyProvider() add bypass for ChEMBL fetchStatus() test
+   8-Oct-2021  - V0.59 Fix changing column heading issue for SAbDabTargetProvider()
